--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -11,8 +11,7 @@ jobs:
 
       - name: webhook
         run: |
-          curl \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/LegoManiac04/file-sync/dispatches \
-            -d '{"event_type":"event_type"}'
+          curl -X POST https://api.github.com/repos/LegoManiac04/file-sync/dispatches \
+          -H 'Accept: application/vnd.github.v3+json" \
+          -H 'Authorization: token $TOKEN' \
+          --data '{"event_type": event_type"}'
