--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Sync
+name: File Sync
 on:
   push
 
@@ -6,9 +6,24 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v1
+      - name: checkout
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          repository: LegoManiac04/file-sync
-          event-type: event_type
+
+      - name: Get files from other repo
+        run: |
+          git clone https://github.com/LegoManiac04/file-sync.git
+          mv ./test/folder/* file-sync/test/folder
+          mv ./test/* file-sync/test/
+          
+      - name: Setup git config
+        run: |
+          git config user.name "qpocketbot"
+          git config user.email ${{ secrets.MY_EMAIL }}
+      - name: Commit
+        run: |
+          # Stage the file, commit and push
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Updated Files"
+          git push
